force-app/main/default/objects/Host_Product_Response__c/Host_Product_Response__c.object-meta.xml
<CustomObject>
    <label>Host Product Response</label>
    <nameField>
        <displayFormat>HPR-{YYYY}-{0000}</displayFormat>
        <label>Host Product Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Host Product Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>