force-app/main/default/objects/Host_Product_Response__c/fields/Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount__c</fullName>
    <inlineHelpText>วงเงินเครดิตที่ตั้งได้จริง (บาท)</inlineHelpText>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>