force-app/main/default/objects/Host_Product_Response__c/fields/App_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>App_Ref_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>หมายเลขอ้างอิง</inlineHelpText>
    <label>App Ref Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>