force-app/main/default/objects/Host_Product_Response__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <inlineHelpText>วงเงินเครดิตที่ได้รับอนุมัติ (บาท)</inlineHelpText>
    <label>Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>