force-app/main/default/objects/Host_Product_Response__c/fields/Cancel_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reject_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>เหตุผลในการยกเลิก/ปฏิเสธคำขออนุมัติสินเชื่อ</inlineHelpText>
    <label>Cancel/Reject Reason</label>
    <length>20</length>
    <type>Text</type>
</CustomField>