force-app/main/default/objects/Host_Product_Response__c/fields/Host_Application_Response__c.field-meta.xml
<CustomField>
    <fullName>Host_Application_Response__c</fullName>
    <inlineHelpText>หมายเลข Application Response</inlineHelpText>
    <label>Host Application Response</label>
    <referenceTo>Host_Application_Response__c</referenceTo>
    <relationshipLabel>Host Product Response</relationshipLabel>
    <relationshipName>Host_Product_Response</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>