force-app/main/default/objects/Host_Product_Response__c/fields/Host_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Host Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>