force-app/main/default/objects/Host_Product_Response__c/fields/Host_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Host_Product_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product Code (SLS)</inlineHelpText>
    <label>Host Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>