force-app/main/default/objects/Host_Product_Response__c/fields/Host_Product_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Host_Product_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host Product Mapping</label>
    <referenceTo>Host_Product_Mapping__c</referenceTo>
    <relationshipLabel>Host Product Response</relationshipLabel>
    <relationshipName>Host_Product_Response</relationshipName>
    <type>Lookup</type>
</CustomField>