force-app/main/default/objects/Host_Product_Response__c/fields/Host_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_Product_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ชื่อ Product (SLS)/Credit Facility</inlineHelpText>
    <label>Host Product Name/Credit Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>