force-app/main/default/objects/Host_Product_Response__c/fields/Host_Product_Program__c.field-meta.xml
<CustomField>
    <fullName>Host_Product_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ชื่อ Product Program (SLS)</inlineHelpText>
    <label>Host Product Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>