force-app/main/default/objects/Host_Product_Response__c/fields/HostProductUniqueKey__c.field-meta.xml
<CustomField>
    <fullName>HostProductUniqueKey__c</fullName>
    <description>เอาไว้ช่วย query =&gt; Host Product Mapping by field Unique key</description>
    <formula>Host_Name__c  + &apos;|&apos; + Host_Product_Group__c + &apos;|&apos; + Host_Product_Program__c + &apos;|&apos; +  Host_Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HostProductUniqueKey</label>
    <type>Text</type>
</CustomField>