force-app/main/default/objects/Host_Product_Response__c/fields/No_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Accounts__c</fullName>
    <inlineHelpText>จำนวนบัญชี/จำนวนวงเงิน</inlineHelpText>
    <label>No. of Accounts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>