force-app/main/default/objects/Host_Product_Response__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to salesforce Product2  
การใส่ค่าจะทำที่ trigger</description>
    <label>Product2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Host Product Response</relationshipLabel>
    <relationshipName>Host_Product_Response</relationshipName>
    <type>Lookup</type>
</CustomField>