force-app/main/default/objects/Host_Product_Response__c/fields/Product_Response_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Response_Key__c</fullName>
    <description>key for mulesoft to upsert</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Product Response Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>