force-app/main/default/objects/Host_Product_Response__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>สถานะของ Product (SLS)</inlineHelpText>
    <label>Product Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>