force-app/main/default/objects/Host_Product_Response__c/fields/Request_Amt_Vol__c.field-meta.xml
<CustomField>
    <fullName>Request_Amt_Vol__c</fullName>
    <inlineHelpText>วงเงินที่ขอเครดิต (บาท)</inlineHelpText>
    <label>Request Amt./Vol.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>